--- a/css/style-contacto.css
+++ b/css/style-contacto.css
@@ -61,8 +61,9 @@ a {
     justify-content: center;
     align-items:flex-start;
     width: 100%;
-    height: 420px;
-    position: relative;;
+    height: 620px;
+    margin-top: 30px;
+    position: relative;
 }
 
 .titulo-form{
