--- a/css/style-ingreso.css
+++ b/css/style-ingreso.css
@@ -61,9 +61,9 @@ a {
     justify-content: center;
     align-items:flex-start;
     width: 100%;
-    height: 400px;
+    height: 600px;
     margin-top: 20px;   
-    position: relative;;
+    position: relative;
 }
 
 .titulo-form{
